[package]
name = "rastbgp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
nom = "8.0.0"
prost = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.0"
tonic = { version = "0.13.1", features = ["transport"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
warp = "0.3.7"

[build-dependencies]
tonic-build = "0.13.1"
